--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,87 @@
-appdirs==1.4.3
-asgiref==3.2.10
+asgiref==3.3.1
+attrs==19.3.0
+Automat==0.8.0
+autopep8==1.5.4
 backcall==0.2.0
+bcrypt==3.1.7
 beautifulsoup4==4.9.3
+behave==1.2.6
 blinker==1.4
-bootstrap4==0.1.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-colorama==0.4.3
-cpplint==1.5.4
+constantly==15.1.0
 cryptography==2.8
-dbus-python==1.2.16
 decorator==4.4.2
-distlib==0.3.0
-distro==1.4.0
+deluge==2.0.3
 dj-database-url==0.5.0
-Django==3.1.2
+Django==3.1.3
 django-bootstrap4==2.3.1
+django-heroku==0.3.1
 entrypoints==0.3
-Faker==4.14.0
-filelock==3.0.12
+fasteners==0.14.1
+future==0.18.2
+GeoIP==1.3.2
 gunicorn==20.0.4
 httplib2==0.14.0
+hyperlink==19.0.0
 idna==2.8
-importlib-metadata==1.5.0
-ipython==7.18.1
-ipython-genutils==0.2.0
+incremental==16.10.1
 jedi==0.17.2
 keyring==18.0.1
+keyrings.alt==3.4.0
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
-macaroonbakery==1.3.1
-more-itertools==4.2.0
+lockfile==0.12.2
+Mako==1.1.0
+MarkupSafe==1.1.0
+monotonic==1.5
 netifaces==0.10.4
+npm==0.1.1
+numpy==1.17.4
 oauthlib==3.1.0
 olefile==0.46
+optional-django==0.1.0
+paramiko==2.6.0
+parse==1.18.0
+parse-type==0.5.2
 parso==0.7.1
 pexpect==4.6.0
 pickleshare==0.7.5
 Pillow==7.0.0
 prompt-toolkit==3.0.8
-protobuf==3.6.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycairo==1.16.2
+pycodestyle==2.6.0
+pycrypto==2.6.1
 pycups==1.9.73
+pygame==1.9.6
 Pygments==2.3.1
-PyGObject==3.36.0
+PyHamcrest==1.9.0
 PyJWT==1.7.1
-pymacaroons==0.13.0
 PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.3
+pyOpenSSL==19.0.0
 python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
+pytz==2020.4
 pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
+rencode==1.0.6
 requests==2.22.0
 requests-unixsocket==0.2.0
 SecretStorage==2.3.1
+service-identity==18.1.0
+setproctitle==1.1.10
 simplejson==3.16.0
 six==1.14.0
 soupsieve==2.0.1
 sqlparse==0.4.1
 systemd-python==234
-text-unidecode==1.3
-traitlets==5.0.5
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+toml==0.10.2
 urllib3==1.25.8
-virtualenv==20.0.17
 wadllib==1.3.3
 wcwidth==0.2.5
 whitenoise==5.2.0
-xkit==0.0.0
-zipp==1.0.0
+zope.interface==4.7.1
